Remove padding around grids and fix dark mode

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,5 +1,6 @@
-body {
+html, body, #root {
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
